--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background-color: #060051;
+  color: white;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,4 +15,27 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.infoDiv {
+  margin: 0px 2%;
+}
+
+.infoDivLast {
+  margin: 0px 0px 0px 1%;
+}
+
+#searchBar {
+  border: 1px solid grey;
+  border-radius: 5px;
+  height: 30px;
+  width: 75%;
+  padding: 2px 23px 2px 30px;
+  outline: 0;
+  background-color: #f5f5f5;
+  margin: 0px;
+}
+
+#searchButton {
+  max-height: 30px;
 }
