--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,21 +29,6 @@ a {
   margin: 0px 0px 0px 1%;
 }
 
-#searchBar {
-  border: 1px solid grey;
-  border-radius: 5px;
-  height: 30px;
-  width: 25%;
-  padding: 2px 23px 2px 30px;
-  outline: 0;
-  background-color: #f5f5f5;
-  margin: 0px;
-}
-
-#searchButton {
-  max-height: 30px;
-}
-
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
 * {
@@ -79,4 +64,54 @@ a {
   100% {
     transform: rotate(360deg);
   }
+}
+
+#naam {
+  min-width: 10%;
+  margin-right: 1rem;
+  color: #fefaf3;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+#woordenNaam {
+  color: #bfac4b;
+  font-size: 16px;
+  font-weight: normal;
+  padding-bottom: 0.5rem;
+}
+
+#woordenNaam:nth-of-type(1) {
+  padding-top: 3rem;
+}
+
+#geslacht {
+  min-width: 10%;
+  margin-right: 1rem;
+  color: #fefaf3;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+#leeftijd {
+  min-width: 10%;
+  margin-right: 1rem;
+  color: #fefaf3;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+#inschrijving {
+  min-width: 12%;
+  margin-right: 1rem;
+  color: #fefaf3;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+#eigenaar {
+  min-width: 53%;
+  color: #fefaf3;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
